5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1685_1950.log
== TEST (2019-05-16 21:48:37) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * vel ** 0.16)+(0.3965 * tem * vel ** 0.16)

if(tem < 50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:49:15) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * vel ** 0.16)+(0.3965 * tem * vel ** 0.16)

if(tem < 50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:49:29) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * vel ** 0.16)+(0.3965 * tem * vel ** 0.16)

if(tem < 50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.218789
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:50:42) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -((11.37 * (vel ** 0.16))+((0.3965 * tem * (vel ** 0.16))

if(tem < 50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
File "XXXX", line 6
    if(tem < 50 or tem == 10):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:52:00) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -((11.37 * (vel ** 0.16))+((0.3965 * tem * (vel ** 0.16))

if(tem == -50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
File "XXXX", line 6
    if(tem == -50 or tem == 10):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:52:23) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -((11.37 * (vel ** 0.16))+((0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
File "XXXX", line 6
    if(tem <= -50 or tem == 10):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:53:53) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem < 50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:54:09) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem < 50 or tem == 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.18901
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:55:56) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:56:08) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem > 50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.155975
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:57:00) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem < -50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:57:11) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem < -50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.150445
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:58:20) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem < -50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:58:50) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem < -50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:03:25) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem < -50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 23:03:47) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10):
	mensagem = form
elif(tem < -50 or tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.176622
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:05:25) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 and tem < 10):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(mensagem, 4))
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 23:05:41) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 and tem < 10):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.131508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1685/1950/main.py", line 13, in <module>
    print(round(mensagem, 4))
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:06:57) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 and tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(mensagem, 4))
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 23:07:11) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 and tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.130044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1685/1950/main.py", line 13, in <module>
    print(round(mensagem, 4))
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:08:27) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 and tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(tem < -50 or vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(mensagem, 4))
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 23:08:38) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 and tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(tem < -50 or vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.20154
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1685/1950/main.py", line 13, in <module>
    print(round(mensagem, 4))
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:17:17) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(tem < -50 or vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 23:17:28) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(tem < -50 or vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.268199
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:17:41) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 and tem > 10):
	mensagem = "Temperatura invalida"
elif(tem < -50 or vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:21:29) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem > -50 or tem < 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:25:07) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 23:25:16) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.193332
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:26:54) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem <= -50 or tem => 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- ERROR:
File "XXXX", line 8
    elif(tem <= -50 or tem => 10 ):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 23:27:04) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:02:19) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-19 20:02:35) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- EXECUTION TIME:
0.219636
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
-6.6558
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:04:35) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:05:49) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:07:15) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem >= -50 or tem <= 10 and vel > 4.8):
	mensagem = form
elif(tem < -50 or tem > 10 ):
	mensagem = "Temperatura invalida"
elif(vel < 4.8):
	mensagem = "Velocidade invalida"
	
print(round(mensagem, 4))




-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:12:23) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem >= 10):
	mensagem = "Temperatura invalida"
elif(vel <= 4.8):
	mensagem = "Velocidade invalida"
elif(tem > -50 or tem < 10 and vel > 4.8):
	mensagem = form
	
print(round(mensagem, 4))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(mensagem, 4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:15:31) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem >= 10):
	print("Temperatura invalida")
elif(vel <= 4.8):
	print("Velocidade invalida")
elif(tem > -50 or tem < 10 and vel > 4.8):
	print(round(form, 4))




-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:15:43) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem >= 10):
	print("Temperatura invalida")
elif(vel <= 4.8):
	print("Velocidade invalida")
elif(tem > -50 or tem < 10 and vel > 4.8):
	print(round(form, 4))




-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:16:06) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem >= 10):
	print("Temperatura invalida")
elif(vel <= 4.8):
	print("Velocidade invalida")
elif(tem > -50 or tem < 10 and vel > 4.8):
	print(round(form, 4))




-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:16:40) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem >= 10):
	print("Temperatura invalida")
elif(vel <= 4.8):
	print("Velocidade invalida")
elif(tem > -50 or tem < 10 and vel > 4.8):
	print(round(form, 4))




-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-19 20:16:52) 
-- CODE:
tem = float(input("digite temperatura: "))
vel = float(input("digite velocidade: "))

form = 13.12 + 0.6215 * tem -(11.37 * (vel ** 0.16))+(0.3965 * tem * (vel ** 0.16))

if(tem <= -50 or tem >= 10):
	print("Temperatura invalida")
elif(vel <= 4.8):
	print("Velocidade invalida")
elif(tem > -50 or tem < 10 and vel > 4.8):
	print(round(form, 4))




-- EXECUTION TIME:
0.136126
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Temperatura invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
